# plex-suggester

./: .gitignore  Dockerfile  README.md  docker-compose.yml  project_plan.md  pyproject.toml  start.bat
src/plex_suggester/: __init__.py  auth.py  cli.py  config.py  engine.py  plex_client.py  storage.py
src/plex_suggester/web/: app.py
src/plex_suggester/web/static/: style.css
src/plex_suggester/web/templates/: base.html  excluded.html  history.html  index.html  results.html
src/plex_suggester/web/templates/partials/: icons.html  movie_card.html
