[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plex-suggester"
version = "0.1.0"
description = "Smart movie suggestion tool for Plex — get Top Picks, Random, or Guilty Pleasures from your unwatched library"
requires-python = ">=3.11"
dependencies = [
    "plexapi>=4.15.0",
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
plex-suggest = "plex_suggester.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/plex_suggester"]
